magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/pulse.css
/* PULSE DASHBOARD STYLES */

.pulse-dashboard .v-splitpanel-hsplitter-locked {
	border:none;
}

.pulse-dashboard .v-feed-section > .v-csslayout-margin-top {
    padding-top:12px;
}

.v-caption-favorites-section {
	padding-bottom:8px;
	color:#679600;
	font-family:DINWebPro, sans-serif;
	font-size:18px;
	font-weight:bold;
}

.v-dashboard-entry {
	border-bottom: 1px solid #CCCCCC;
	padding:10px 0 5px 3px;
	font-size:15px;
}

.v-dashboard-entry .v-label {
	display:inline-block;
}

.v-dashboard-entry .v-label-icon {
	width:32px;
	height:32px;
	color:#679600;
	margin-right:10px;
	font-size:32px;
	position: relative;
    top:-12px;
    float:left;
}

.v-dashboard-entry .content {
	margin-left:40px;
}

.v-dashboard-entry .v-label-comment:empty {
	display:none;
}
.v-dashboard-entry .v-label-comment {
	padding:8px;
	background-color:#e6e6e6;
	margin-bottom:5px;
	white-space:normal !important;
}
.v-dashboard-entry .comment-divet {
	color:#E6E6E6;
    display:inline-block;
    font-size:20px;
    height:14px;
    line-height:20px;
    overflow:hidden;
    padding-left:12px;
}

.v-dashboard-entry .v-label-date {
	color:#cccccc;
	text-align:right;
}

.v-pulse .v-feed-title-link {
    width: 16px;
    height: 16px;
    border: 0;
    background: url("img/icon-rss.png") no-repeat scroll 0 0 transparent;
}

.v-pulse .category-separator {
    display:inline-block;
    padding:10px 0;
}

.v-pulse .category-separator, .v-pulse .recent-pages th {
    color:#000000;
    font-family:Arial,Helvetica,sans-serif;
    font-size:15px;
    font-weight:bold;
}

.v-pulse .recent-pages {
	font-size:15px;
	width:100%;
}

.v-pulse .recent-pages tr {
	height:34px;
}

.v-pulse .recent-pages .status-icon {
	font-size:32px;
	line-height:24px;
	position:relative;
    top:-2px;
}

.pulse-dashboard .icon-rssfeed {
	position:absolute;
	top:8px;
	right:20px;
	color:#CCCCCC;
    font-size: 20px;
}

